[package]
name = "yambler"
version = "0.1.0"
authors = ["Charlie Ozinga <ozchaz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.8"
yaml-rust = "0.4"
env_logger = "0.7"
error-chain = "0.12"

[dependencies.clap]
version = "2.33"
features = ["wrap_help"]
