[package]
name = "yambler"
version = "0.2.1"
authors = ["Charlie Ozinga <ozchaz@gmail.com>"]
edition = "2018"
description = "Yambler is a tool to stitch reusable yaml snippets together."
homepage = "https://github.com/chaaz/versio-actions/tree/changes/yambler/"
repository = "https://github.com/chaaz/versio-actions/"
license-file = "LICENSE.txt"
keywords = ["yaml", "actions", "development", "configuration"]
categories = ["command-line-utilities", "config"]

[dependencies]
serde_yaml = "0.8"
yaml-rust = "0.4"
env_logger = "0.7"
error-chain = "0.12"

[dependencies.clap]
version = "2.33"
features = ["wrap_help"]
